Fix timestamp wrapping when default notes are long
Previously long e.g. task names would create a default
annotation with the timestamp squished to the right instead
of inline.

--- a/src/app/styles/components/annotation/_annotation.scss
+++ b/src/app/styles/components/annotation/_annotation.scss
@@ -128,7 +128,7 @@
   }
 
   .annotation__timestamp {
-    // letter-spacing: -0.5px;
+    white-space: pre;
     color: $black-38;
     display: inline;
     margin-right: 12px;
