--- a/src/app/styles/components/task/_task.scss
+++ b/src/app/styles/components/task/_task.scss
@@ -19,6 +19,7 @@
     font-size: 12px;
     color: $black-38;
     word-wrap: break-word;
+    word-break: break-all;
   }
 
   .task__response {
